list book waiting owner approve

--- a/views/books/waiting_approve.ejs
+++ b/views/books/waiting_approve.ejs
@@ -15,157 +15,60 @@
 		</div>
 		<div class="space-20"></div>
 		<div class="row">
-			<div class="col-xs-12 col-md-4 wow fadeInLeft" data-wow-delay="0.1s" data-wow-offset="50">
-				<div class="category-item well yellow">
-					<div class="media">
-						<div class="media-left">
-							<img src="/images/book_thumb_default.jpg" class="media-object">
-						</div>
-						<div class="media-body">
-							<h5>Book title</h5>
-							<h6>Author Framgia</h6>
-							<div class="space-10"></div>
-							<p>
-                                Lorem
-							</p>
-							<a href="#" class="text-primary">View detail</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-xs-12 col-md-4 wow fadeInLeft" data-wow-delay="0.1s" data-wow-offset="50">
-				<div class="category-item well yellow">
-					<div class="media">
-						<div class="media-left">
-							<img src="/images/book_thumb_default.jpg" class="media-object">
-						</div>
-						<div class="media-body">
-							<h5>Book title</h5>
-							<h6>Author Framgia</h6>
-							<div class="space-10"></div>
-							<p>
-                                Lorem
-							</p>
-							<a href="#" class="text-primary">View detail</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-xs-12 col-md-4 wow fadeInLeft" data-wow-delay="0.1s" data-wow-offset="50">
-				<div class="category-item well yellow">
-					<div class="media">
-						<div class="media-left">
-							<img src="/images/book_thumb_default.jpg" class="media-object">
-						</div>
-						<div class="media-body">
-							<h5>Book title</h5>
-							<h6>Author Framgia</h6>
-							<div class="space-10"></div>
-							<p>
-                                Lorem
-							</p>
-							<a href="#" class="text-primary">View Users</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-xs-12 col-md-4 wow fadeInLeft" data-wow-delay="0.1s" data-wow-offset="50">
-				<div class="category-item well yellow">
-					<div class="media">
-						<div class="media-left">
-							<img src="/images/book_thumb_default.jpg" class="media-object">
-						</div>
-						<div class="media-body">
-							<h5>Book title</h5>
-							<h6>Author Framgia</h6>
-							<div class="space-10"></div>
-							<p>
-                                Lorem
-							</p>
-							<a href="#" class="text-primary">View detail</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-xs-12 col-md-4 wow fadeInLeft" data-wow-delay="0.1s" data-wow-offset="50">
-				<div class="category-item well yellow">
-					<div class="media">
-						<div class="media-left">
-							<img src="/images/book_thumb_default.jpg" class="media-object">
-						</div>
-						<div class="media-body">
-							<h5>Book title</h5>
-							<h6>Author Framgia</h6>
-							<div class="space-10"></div>
-							<p>
-                                Lorem
-							</p>
-							<a href="#" class="text-primary">View detail</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-xs-12 col-md-4 wow fadeInLeft" data-wow-delay="0.1s" data-wow-offset="50">
-				<div class="category-item well yellow">
-					<div class="media">
-						<div class="media-left">
-							<img src="/images/book_thumb_default.jpg" class="media-object">
-						</div>
-						<div class="media-body">
-							<h5>Book title</h5>
-							<h6>Author Framgia</h6>
-							<div class="space-10"></div>
-							<p>
-                                Lorem
-							</p>
-							<a href="#" class="text-primary">View Users</a>
-						</div>
-					</div>
-				</div>
-			</div>
+			<% books.items.data.forEach(function (book) { %>
+				<div class="col-xs-12 col-md-4 wow fadeInLeft" data-wow-delay="0.1s" data-wow-offset="50">
+	                <div class="category-item well yellow">
+	                    <div class="media">
+	                        <div class="media-left">
+	                            <img src="<%= book.image ? book.image.web.thumbnail_path : '/images/book_thumb_default.jpg' %>" 
+	                            	class="media-object" alt="<%= book.title %>">
+	                        </div>
+	                        <div class="media-body">
+	                            <h5 title="<%= book.title %>" data-toggle="tooltip">
+	                            	<%= book.title ? getString(book.title, configs.book.title_limit_characters) : 'No title' %>
+	                            </h5>
+	                            <h6 title="<%= book.athor %>" data-toggle="tooltip">
+	                            	<%= book.author ? getString(book.title, configs.book.author_limit_characters) : 'Framgia' %>
+	                            </h6>
+	                            <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" value="<%= book.avg_star %>" disabled="true" data-step="0.01" data-size="xs">
+	                            <div class="space-10"></div>
+	                            <p>
+	                                <%= book.overview %>
+	                            </p>
+	                            <a href="#" class="text-primary">View Users Waiting Approve</a>
+	                        </div>
+	                    </div>
+	                </div>
+	            </div>
+			<% }) %>
 		</div>
 		<div class="space-60"></div>
 		<div class="row text-center">
 			<div class="col-xs-12">
 				<div class="shop-pagination pull-right">
 					<ul id="pagination-book" class="pagination-sm pagination">
-						<li class="page-item first disabled">
-							<a class="page-link" href="#"><i class="icofont icofont-double-left"></i></a>
-						</li>
-						<li class="page-item prev disabled">
-							<a class="page-link" href="#"><i class="icofont icofont-simple-left"></i></a>
-						</li>
-						<li class="page-item active">
-							<a class="page-link" href="#">1</a>
-						</li>
-						<li class="page-item">
-							<a class="page-link" href="#">2</a>
-						</li>
-						<li class="page-item">
-							<a class="page-link" href="#">3</a>
-						</li>
-						<li class="page-item">
-							<a class="page-link" href="#">4</a>
-						</li>
-						<li class="page-item">
-							<a class="page-link" href="#">5</a>
-						</li>
-						<li class="page-item">
-							<a class="page-link" href="#">6</a>
-						</li>
-						<li class="page-item">
-							<a class="page-link" href="#">7</a>
-						</li>
-						<li class="page-item next">
-							<a class="page-link" href="#"><i class="icofont icofont-simple-right"></i></a>
-						</li>
-						<li class="page-item last">
-							<a class="page-link" href="#"><i class="icofont icofont-double-right"></i></a>
-						</li>
-					</ul>
+                    </ul>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
 <!--End section-->
+
+<%- contentFor('appjs') %>
+<script src="/javascripts/books/book.js" type="text/javascript"></script>
+<script src="/javascripts/paginations/paginate.js"></script>
+
+<script type="text/javascript">
+    var totalPages = Math.ceil("<%= books.items.total %>"/"<%= books.items.per_page %>");
+    var currentPage = parseInt("<%= books.items.current_page %>");
+    var nextPage = "<%= books.items.next_page %>"
+
+    if (totalPages) {
+        Paginate.book({
+            totalPages: totalPages,
+            currentPage: currentPage,
+            nextPage: nextPage
+        });
+    }
+</script>
