--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -59,6 +59,9 @@
                                         <a href="/books/add"> <span><i class="icofont icofont-ui-add"></i></span> Add Books </a>
                                     </li>
                                     <li>
+                                        <a href="/books/waiting_approve"> <span><i class="icofont icofont-ui-add"></i></span> Books Waiting Approve </a>
+                                    </li>
+                                    <li>
                                         <a href="#"> <span><i class="icofont icofont-read-book"></i></span> My Books</a>
                                     </li>
                                     <li>
