Update function add book

--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -142,7 +142,7 @@
                                     <option value="return" <%= data.item.btn_booking.status !== 3 ? 'disabled' : '' %>>Return</option>
                                 </select>
                             </div>
-                            <button class="btn btn-primary btn-lg" id="add-owner"> Add owner this book </button>
+                            <button class="btn btn-primary btn-sm" id="add-owner"> Add owner this book </button>
                         </div>
                     </div>
                 </div>
