--- a/resources/assets/css/overright.css
+++ b/resources/assets/css/overright.css
@@ -266,7 +266,8 @@
 }
 
 #add-owner {
-    padding: 4px;
+    margin-top: 0px;
+    padding: 10px;
 }
 
 .owner-image-home {
@@ -280,4 +281,8 @@
     float:left;
     width: 50px;
     height: 50px;
+}
+
+#fillSuggestData {
+    margin: 0px;
 }
