--- a/views/books/waiting_approve.ejs
+++ b/views/books/waiting_approve.ejs
@@ -56,6 +56,7 @@
 <!--End section-->
 
 <%- contentFor('appjs') %>
+<script src="/bower/bootstrap-star-rating/js/star-rating.js"></script>
 <script src="/javascripts/books/book.js" type="text/javascript"></script>
 <script src="/javascripts/paginations/paginate.js"></script>
 
@@ -72,3 +73,7 @@
         });
     }
 </script>
+
+<%- contentFor('appCss') %>
+<link href="/bower/bootstrap-star-rating/css/star-rating.css" rel="stylesheet" type="text/css">
+<link href="/bower/bootstrap-star-rating/css/theme-krajee-fa.css" rel="stylesheet" type="text/css">
