Fix UI and fix html entities description book

--- a/views/books/waiting_approve.ejs
+++ b/views/books/waiting_approve.ejs
@@ -20,7 +20,7 @@
 	                <div class="category-item well yellow">
 	                    <div class="media">
 	                        <div class="media-left">
-	                            <img src="<%= book.image ? book.image.web.thumbnail_path : '/images/book_thumb_default.jpg' %>" 
+	                            <img src="<%= book.image ? book.image.web.thumbnail_path : '/images/book_thumb_default.jpg' %>"
 	                            	class="media-object" alt="<%= book.title %>">
 	                        </div>
 	                        <div class="media-body">
@@ -33,7 +33,7 @@
 	                            <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" value="<%= book.avg_star %>" disabled="true" data-step="0.01" data-size="xs">
 	                            <div class="space-10"></div>
 	                            <p>
-	                                <%= book.overview %>
+	                                <%- book.overview %>
 	                            </p>
 	                            <a href="#" class="text-primary">View Users Waiting Approve</a>
 	                        </div>
@@ -42,15 +42,17 @@
 	            </div>
 			<% }) %>
 		</div>
-		<div class="space-60"></div>
-		<div class="row text-center">
-			<div class="col-xs-12">
-				<div class="shop-pagination pull-right">
-					<ul id="pagination-book" class="pagination-sm pagination">
-                    </ul>
+		<% if (books.items.total > books.items.per_page) { %>
+			<div class="space-60"></div>
+			<div class="row text-center">
+				<div class="col-xs-12">
+					<div class="shop-pagination pull-right">
+						<ul id="pagination-book" class="pagination-sm pagination">
+	                    </ul>
+					</div>
 				</div>
 			</div>
-		</div>
+		<% } %>
 	</div>
 </section>
 <!--End section-->
@@ -58,6 +60,7 @@
 <%- contentFor('appjs') %>
 <script src="/javascripts/books/book.js" type="text/javascript"></script>
 <script src="/javascripts/paginations/paginate.js"></script>
+<script src="/bower/bootstrap-star-rating/js/star-rating.js"></script>
 
 <script type="text/javascript">
     var totalPages = Math.ceil("<%= books.items.total %>"/"<%= books.items.per_page %>");
@@ -72,3 +75,7 @@
         });
     }
 </script>
+
+<%- contentFor('appCss') %>
+<link href="/bower/bootstrap-star-rating/css/star-rating.css" rel="stylesheet" type="text/css">
+<link href="/bower/bootstrap-star-rating/css/theme-krajee-fa.css" rel="stylesheet" type="text/css">
