--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,12 +44,12 @@
                             <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" value=<%= book.avg_star %> disabled="true" data-step="0.01" data-size="xs">
                             <div class="space-10"></div>
                             <p>
-                                <%= book.overview %>
+                                <%- book.overview %>
                             </p>
                             <a href="/books/<%= book.id %>" class="text-primary">View detail</a>
                         </div>
                     </div>
-                    <strong> Owners </strong>
+                    <strong> Shared by: </strong>
                     <% if (book.owners) { %>
                         <% var countOwner = 0 %>
                         <% book.owners.forEach(function (owner) { %>
