--- a/views/books/add.ejs
+++ b/views/books/add.ejs
@@ -1,10 +1,10 @@
 <section class="gray-bg">
-    <div class="space-80"></div>
+    <div class="space-20"></div>
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 text-center">
                 <h2 class="text-danger">Add <strong>Your Book</strong></h2>
-                <div class="space-20"></div>
+                <div class="space-10"></div>
                 <div class="title-bar blue">
                     <ul class="list-inline list-unstyled">
                         <li><i class="icofont icofont-square"></i></li>
@@ -13,12 +13,13 @@
                 </div>
             </div>
         </div>
-        <div class="space-60"></div>
+        <div class="space-20"></div>
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                 <div id="modelSpace"></div>
                 <div class='suggestedTitle'></div>
-                <span><button class="btn btn-primary btn-xs" id="fillSuggestData"> Import data book </button></span>
+                <button class="btn btn-primary btn-xs" id="fillSuggestData"> Import data book </button>
+                <div class="space-10"></div>
                 <form action="/books/add" id="form-add-book" method="post" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-xs-12 col-sm-12">
@@ -98,7 +99,7 @@
             </div>
         </div>
     </div>
-    <div class="space-80"></div>
+    <div class="space-30"></div>
 </section>
 
 <%- contentFor('appjs') %>
