--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 text-center">
                 <h2>Book detail</h2>
-                <div class="space-20"></div>
+                <div class="space-10"></div>
                 <div class="title-bar blue">
                     <ul class="list-inline list-unstyled">
                         <li><i class="icofont icofont-square"></i></li>
@@ -44,7 +44,7 @@
                                 <h4 class="tip-left">Author</h4>
                                 <div class="media">
                                     <div class="media-left">
-                                        <img src="<%= data.item.author ? '/images/user_default.png' : '/images/logo_framgia.png' %>"
+                                        <img class="img-owner-detail img-circle" src="<%= data.item.author ? '/images/user_default.png' : '/images/logo_framgia.png' %>"
                                              class="media-object author-photo img-thumbnail"
                                              alt="library">
                                     </div>
@@ -57,7 +57,7 @@
                         <div class="space-30"></div>
                         <div class="row">
                             <div class="col-xs-12 col-sm-8">
-                                <h4 class="tip-left">Owner By</h4>
+                                <h4 class="tip-left">Shared by</h4>
                                 <% if (data.item.owners.length > 0) { %>
                                     <% data.item.owners.forEach(function (owner) { %>
                                         <a class="owner-image" data-toggle="tooltip" title="<%= owner.name %>" href="/users/<%= owner.id %>">
@@ -82,10 +82,12 @@
                         </div>
                         <div class="space-30"></div>
                         <h4 class="tip-left">Description</h4>
-                        <p><%= data.item.description %></p>
+                        <p><%- data.item.description %></p>
                         <div class="space-20"></div>
                         <h4 class="tip-left">Rating</h4>
                         <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" value=<%= data.item.avg_star %> disabled="true" data-step="0.01" data-size="xs">
+                        <div class="space-20"></div>
+                        <h4 class="tip-left">Activities</h4>
                         <div class="row">
                             <div class="col-xs-12 col-sm-4">
                                 <div class="media">
@@ -523,7 +525,7 @@
             </div>
         </div>
     </div>
-    <div class="space-100"></div>
+    <div class="space-20"></div>
 </section>
 
 <%- contentFor('appjs') %>
