Custom header and footer

--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -2,7 +2,7 @@
     <div class="space-20"></div>
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-12 col-sm-6 col-md-6">
                 <a href="#"><img src="/images/logo_framgia.png" alt="library" class="logo-image"><span class="logo-text">FBook</span></a>
                 <div class="space-20"></div>
                 <p>A new world of reading awaits</p>
@@ -17,14 +17,14 @@
                             <i class="icofont icofont-brand-linkedin"></i>
                         </a>
                     </li>
-                </ul>
-                <ul class="list-unstyled list-inline tip yellow">
-                    <li><i class="icofont icofont-square"></i></li>
-                    <li><i class="icofont icofont-square"></i></li>
-                    <li><i class="icofont icofont-square"></i></li>
+                    <li>
+                        <a href="https://github.com/framgia" target="_blank">
+                            <i class="icofont icofont-social-github"></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
-            <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-1">
+            <div class="col-xs-12 col-sm-6 col-md-6">
                 <h4 class="text-white">Contact Us</h4>
                 <table class="table border-none addr-dt">
                     <tr>
@@ -40,16 +40,6 @@
                         <td> 84-4-3795-5417</td>
                     </tr>
                 </table>
-            </div>
-            <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-1">
-                <h4 class="text-white">More Tools</h4>
-                <ul class="list-unstyled menu-tip">
-                    <li><a href="http://wsm.framgia.vn/" target="_blank">WSM</a></li>
-                    <li><a href="http://crb.framgia.vn/" target="_blank">CRB</a></li>
-                    <li><a href="http://poll.framgia.vn/" target="_blank">FPoll</a></li>
-                    <li><a href="http://club.framgia.vn/" target="_blank">FClub</a></li>
-                    <li><a href="http://survey.framgia.vn/" target="_blank">FSurvey</a></li>
-                </ul>
             </div>
         </div>
     </div>
