--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -80,6 +80,12 @@
                         <li class="active">
                             <a href="/home">Home</a>
                         </li>
+                        <li>
+                            <a href="https://goo.gl/forms/5GLWPJNUGJJR2J2l2" target="_blank">Feedback</a>
+                        </li>
+                        <li>
+                            <a href="http://education.framgia.vn/tools" target="_blank">More Tools</a>
+                        </li>
                         <% if (typeof user != 'undefined' && typeof user.name !== 'undefined' && user.name) { %>
                             <li>
                                 <a href="#"><%= user.name %></a>
