Add loader when add book

--- a/resources/assets/css/overright.css
+++ b/resources/assets/css/overright.css
@@ -286,3 +286,18 @@
 #fillSuggestData {
     margin: 0px;
 }
+
+.img-avatar-book {
+    cursor: pointer;
+}
+
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('/images/loader.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: 0.6;
+}
