--- a/views/books/add.ejs
+++ b/views/books/add.ejs
@@ -14,6 +14,7 @@
             </div>
         </div>
         <div class="space-20"></div>
+        <div class="loader"></div>
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                 <div id="modelSpace"></div>
