--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -16,13 +16,19 @@
         <div class="row">
             <div class="col-xs-12 col-md-6 book-list-position padding60  ">
                 <div class="book-list-photo">
-                    <% if (typeof(data.item.media) != 'undefined') { %>
+                    <% if (data.item.media.length) { %>
                         <div class="book-list">
                             <% data.item.media.forEach(function (image) { %>
                             <div class="book_item">
                                 <img src="<%= image.web.medium_path %>" alt="library">
                             </div>
                             <% }) %>
+                        </div>
+                    <% } else { %>
+                        <div class="book-list">
+                            <div class="book_item">
+                                <img src="/images/book_thumb_default.jpg" alt="library">
+                            </div>
                         </div>
                     <% } %>
                 </div>
