--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -59,7 +59,7 @@
                                         <a href="/books/add"> <span><i class="icofont icofont-ui-add"></i></span> Add Books </a>
                                     </li>
                                     <li>
-                                        <a href="/books/waiting_approve"> <span><i class="icofont icofont-ui-add"></i></span> Books Waiting Approve </a>
+                                        <a href="/books/waiting_approve"> <span><i class="glyphicon glyphicon-ok"></i></span> Approve requests </a>
                                     </li>
                                     <li>
                                         <a href="#"> <span><i class="icofont icofont-read-book"></i></span> My Books</a>
